MyFirstProject/src/objects/Project_Description__c.object
<CustomObject>
    <fields>
        <fullName>Client_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Project Description</relationshipLabel>
        <relationshipName>Project_Description</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <label>Implementation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EMPLOYEE__c.Role__r.Name__c</field>
                <operation>equals</operation>
                <value>&quot;ProjectManager&quot;</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EMPLOYEE__c</referenceTo>
        <relationshipLabel>Project Description</relationshipLabel>
        <relationshipName>Project_Description</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proj_Manager_Email__c</fullName>
        <label>Proj_Manager_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Manager_email__c</fullName>
        <label>Manager_email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_code__c</fullName>
        <displayFormat>PRJ-{0000}</displayFormat>
        <label>Project code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Description</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project D Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Description</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c  &lt;   Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End date should be greater than start date</errorMessage>
    </validationRules>
</CustomObject>